fix jumping picture

--- a/src/styles/projectImages.css
+++ b/src/styles/projectImages.css
@@ -1,5 +1,4 @@
 #pictures-to-move {
-    position: relative;
     z-index: -1;
 }
 
